[gd_scene load_steps=3 format=2]

[ext_resource path="res://bosses/PhantomBat.tscn" type="PackedScene" id=1]
[ext_resource path="res://enemies/PhantomBatEnemy.gd" type="Script" id=2]

[node name="PhantomBatEnemy" type="Node2D"]
script = ExtResource( 2 )

[node name="PhantomBat" parent="." instance=ExtResource( 1 )]
position = Vector2( 1246, 25 )

[node name="Enemy" parent="PhantomBat" index="3"]
drop = "random"

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
position = Vector2( 1246, 25 )

[node name="Timer" type="Timer" parent="."]
wait_time = 4.0

[connection signal="screen_entered" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_entered"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout" flags=6]

[editable path="PhantomBat"]
